{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 382,
  "lineage": "9aeb6e11-3e69-36fe-7c05-4e6af7a88c8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:024686625088:security-group/sg-0adc4834f923c36d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adc4834f923c36d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "024686625088",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0fa7b9f44c536f933"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:024686625088:instance/i-0a03c877b36adb1f0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a03c877b36adb1f0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a27a7f97f5d9b381",
            "private_dns": "ip-10-0-0-106.eu-west-1.compute.internal",
            "private_ip": "10.0.0.106",
            "public_ip": "52.212.76.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08572ee75bd0fb40e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e6ffb07b36f9619",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05780bff5d46f82e7"
            ]
          },
          "dependencies": [
            "module.my_ec2.aws_key_pair.demo_key",
            "module.my_ec2.aws_security_group.web_sg",
            "module.my_vpc.aws_subnet.public_sn",
            "module.my_vpc.aws_vpc.vpc",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pytest_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:024686625088:instance/i-022fc8e0a4e8cfa6b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022fc8e0a4e8cfa6b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c067f270ad639df3",
            "private_dns": "ip-10-0-0-184.eu-west-1.compute.internal",
            "private_ip": "10.0.0.184",
            "public_ip": "54.78.212.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-040f52d9a37f534cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e6ffb07b36f9619",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05780bff5d46f82e7"
            ]
          },
          "dependencies": [
            "module.my_ec2.aws_key_pair.demo_key",
            "module.my_ec2.aws_security_group.web_sg",
            "module.my_vpc.aws_subnet.public_sn",
            "module.my_vpc.aws_vpc.vpc",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:024686625088:security-group/sg-05780bff5d46f82e7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05780bff5d46f82e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "024686625088",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0fa7b9f44c536f933"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:024686625088:internet-gateway/igw-0788d4d088910e33c",
            "id": "igw-0788d4d088910e33c",
            "owner_id": "024686625088",
            "vpc_id": "vpc-0fa7b9f44c536f933"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0949955e97ee9b86a",
            "owner_id": "024686625088",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0788d4d088910e33c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0fa7b9f44c536f933"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.vpc_igw",
            "module.my_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sn_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034248b80cde08c7f",
            "route_table_id": "rtb-0949955e97ee9b86a",
            "subnet_id": "subnet-05e6ffb07b36f9619"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.vpc_igw",
            "module.my_vpc.aws_route_table.vpc_rt",
            "module.my_vpc.aws_subnet.public_sn",
            "module.my_vpc.aws_vpc.vpc",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:024686625088:subnet/subnet-017bf46a421c0311d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-017bf46a421c0311d",
            "map_public_ip_on_launch": false,
            "owner_id": "024686625088",
            "vpc_id": "vpc-0fa7b9f44c536f933"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:024686625088:subnet/subnet-05e6ffb07b36f9619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-05e6ffb07b36f9619",
            "map_public_ip_on_launch": false,
            "owner_id": "024686625088",
            "vpc_id": "vpc-0fa7b9f44c536f933"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.vpc",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:024686625088:vpc/vpc-0fa7b9f44c536f933",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01995a3c270aa4c47",
            "default_route_table_id": "rtb-0435d0be775cd1922",
            "default_security_group_id": "sg-062fda166ce1422f4",
            "dhcp_options_id": "dopt-a0ab90c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fa7b9f44c536f933",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0435d0be775cd1922",
            "owner_id": "024686625088"
          }
        }
      ]
    }
  ]
}